--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -40,7 +40,9 @@
     .avatar {
       width: 100px;
       height: 100px;
-      margin-right: 30px;
+      margin: 0;
+      
+
       .border-radius(50%);
       @media(max-width: 600px) {
         width: 70px;
