--- a/assets/css/less_parts/author.less
+++ b/assets/css/less_parts/author.less
@@ -3,8 +3,14 @@
 		display: none;
 	}
 
+	.avatar {
+		float:none;
+		margin:0;
+	}
+
 	h3 {
 		 font-size: 2.5em;
+		 margin:10px;
 	}
 
 	.link-preview {
