--- a/assets/css/less_parts/githubcard.less
+++ b/assets/css/less_parts/githubcard.less
@@ -27,7 +27,7 @@
 .profile {
   background: #FFF;
   overflow: hidden;
-  padding: 20px 30px;
+  padding: 20px 25px;
   padding-bottom: 0;
   min-height: 135px;
 }
@@ -75,7 +75,7 @@
   font-size: 0.8em;
   color: white;
   float: left;
-  padding: 10px 20px;
+  padding: 10px 14px;
   line-height: 1;
   background: @theme-color;
 }
@@ -156,10 +156,15 @@
     background: #eaeaea;
     padding: 16px;
 
-    &:hover {
+    &:hover,
+    &:hover span {
       background-color: @hover-color;
       color:white;
       cursor: pointer;
+    }
+
+    &:hover .star::after{
+      opacity:1;
     }
 
     &:first-of-type {
@@ -169,13 +174,14 @@
 
   .repo-name {
     max-width: 280px;
-    font-weight: bold;
     text-overflow: ellipsis;
+    color:@theme-color;
+    font-family: 'akzidenz-medium';
   }
 
   .updated {
     display: block;
-    font-size: 0.75em;
+    font-size: 0.85em;
     font-style: italic;
     color: #777;
   }
@@ -191,6 +197,8 @@
       content: '\a0\2605';
       font-size: 1.1em;
       font-weight: bold;
+      color: #e99405;
+      opacity: .5;
     }
   }
 }
