--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -108,7 +108,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgb(8, 115, 195) 100%);
+	background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 10%, rgb(17, 25, 46) 100%);
 	height: 150px;
 	z-index: 100;
 	@media(max-width: 800px) {
