--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -35,6 +35,13 @@
     }
   }
 
+  .featured-media {
+    display:none;
+    @media(max-width: 800px){
+      display:block;
+    }
+  }
+
   .page-head {
     .post-title {
       margin: 40px 40px 0;
