--- a/assets/css/less_parts/tags.less
+++ b/assets/css/less_parts/tags.less
@@ -65,10 +65,10 @@
   }
 
   .roundup {
-    color: #6176f3;
+    color: #7f8aca;
 
     i {
-      color: #6176f3 !important;
+      color: #7f8aca !important;
     }
   }
 
