--- a/assets/css/less_parts/widgets.less
+++ b/assets/css/less_parts/widgets.less
@@ -18,6 +18,7 @@
 		    color: #FFFFFF;
 				width: 100%;
 				padding: 10px 20px;
+				border: 0;
 
 				&:hover {
 					background: @hover-color;
@@ -59,14 +60,14 @@
 		p {
 			margin: 0;
 			font-size: 14px;
-			line-height: 1.5;
+			line-height: 1.75;
 		}
 	}
 
 	.post-title {
 		a {
-			color: #627e90;
-			font-family: 'akzidenz', 'proxima-nova', serif;
+			color: #208cad;
+			font-family: 'akzidenz-regular', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
