--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -9,6 +9,7 @@
 @import "less_parts/footer.less";
 @import "less_parts/menu.less";
 @import "less_parts/post.less";
+@import "less_parts/postfooter.less";
 @import "less_parts/postpreview.less";
 @import "less_parts/variables.less";
 
@@ -40,6 +41,11 @@
 @font-face {
 	font-family: 'akzidenz-medium';
 	src: url("../fonts/akzidenzgrotesk-bq-medium.otf") format("opentype");
+}
+
+@font-face {
+	font-family: 'akzidenz-regular';
+	src: url("../fonts/akzidenzgrotesk-bq-regular.otf") format("opentype");
 }
 
 /*====================================================
