--- a/assets/css/less_parts/githubcard.less
+++ b/assets/css/less_parts/githubcard.less
@@ -1,42 +1,39 @@
-.github-team {
-  display: flex;
-  justify-content: space-between;
-
-  @media(max-width: 800px){
-    display: block;
+.page-projects {
+  .github-team {
+    display: flex;
+    justify-content: space-between;
+    @media(max-width: 800px) {
+      display: block;
+    }
   }
-}
 
-#github-card-todd,
-#github-card-matt, {
-  width: 46%;
-  font-size: 16px;
-  border-width: 1px 1px 2px;
-  border-style: solid;
-  border-color: #DDD;
-  overflow: hidden;
-  padding: 10px;
-
-  @media(max-width: 800px){
-    width: 100%;
-    margin-bottom: 30px;
+  #github-card-matt,
+  #github-card-todd {
+    width: 46%;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #DDD;
+    overflow: hidden;
+    padding: 10px;
+    @media(max-width: 800px) {
+      width: 100%;
+      margin-bottom: 30px;
+    }
   }
-}
 
+  .profile {
+    background: #FFF;
+    overflow: hidden;
+    padding: 20px 25px 0;
+    min-height: 135px;
+  }
 
-.profile {
-  background: #FFF;
-  overflow: hidden;
-  padding: 20px 25px;
-  padding-bottom: 0;
-  min-height: 135px;
-}
+  .stats {
+    padding: 5px;
+  }
 
-.stats {
-  padding: 5px;
-}
-
-.languages {
+  .languages {
     position: relative;
     clear: both;
     margin: 0 -10px;
@@ -47,162 +44,158 @@
     justify-content: space-between;
     list-style: none;
 
-
-  &::before {
-    position: absolute;
-    top: -0.7em;
-    background: #FFF;
-    padding-right: 5px;
-    content: 'Top languages';
-    font-style: italic;
-    color: #555;
-  }
-
-  li {
-    display: inline-block;
-    font-family: 'akzidenz-medium';
-    color: #444;
-    margin-left: 10px;
-    font-size: 1.1em;
-  }
-}
-
-.followMe {
-  margin-top: 3px;
-}
-
-.follow-button {
-  font-size: 0.8em;
-  color: white;
-  float: left;
-  padding: 10px 14px;
-  line-height: 1;
-  background: @theme-color;
-}
-
-.follow-button:hover {
-  color: inherit;
-  background: @hover-color;
-}
-
-/* followers number */
-.followMe span {
-  position: relative;
-  background: #FFF;
-  margin-left: 8px;
-  padding: 3px 8px;
-  color: #444;
-  font-size: 0.8em;
-  border: 1px solid;
-  border-color: #BBB;
-  margin-top: 5px;
-  border-radius: 2px;
-}
-
-.followMe span::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 5px;
-  height: 5px;
-  left: -4px;
-  top: 30%;
-  background: inherit;
-  border-left: 1px solid;
-  border-top: 1px solid;
-  border-color: inherit;
-  -moz-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.avatar {
-  width: 64px;
-  height: 64px;
-  float: left;
-  margin: 0 20px 25px 0;
-  margin-left: 0;
-  border-radius: 2px;
-  box-shadow: 0 0 2px 0 #DDD;
-}
-
-/* List of repositories */
-
-.repos {
-  & {
-    clear: both;
-  }
-
-  .header {
-    display: block;
-    width: auto;
-    border-width: 1px 0;
-    /* color: #29d4a7; */
-    font-size: 1.3em;
-    padding: 15px 15px 0;
-    height: fit-content;
-    text-transform: uppercase;
-    font-family: 'mr-eaves-xl-modern', sans-serif;
-  }
-
-  a {
-    position: relative;
-    display: block;
-    margin: 7px 10px;
-    font-size: 0.9em;
-    border-top: 0;
-    width: auto;
-    background: #eaeaea;
-    padding: 16px;
-
-    &:hover,
-    &:hover span {
-      background-color: @hover-color;
-      color:white;
-      cursor: pointer;
+    &::before {
+      position: absolute;
+      top: -0.7em;
+      background: #FFF;
+      padding-right: 5px;
+      content: 'Top languages';
+      font-style: italic;
+      color: #555;
     }
 
-    &:hover .star::after{
-      opacity:1;
-    }
-
-    &:first-of-type {
-      border: none;
-    }
-  }
-
-  .repo-name {
-    max-width: 280px;
-    text-overflow: ellipsis;
-    color:@theme-color;
-    font-family: 'akzidenz-medium';
-  }
-
-  .updated {
-    display: block;
-    font-size: 0.85em;
-    font-style: italic;
-    color: #777;
-  }
-
-  .star {
-    position: absolute;
-    font-size: 0.9em;
-    right: 1em;
-    top: 2em;
-    color: #888;
-
-    &::after {
-      content: '\a0\2605';
+    li {
+      display: inline-block;
+      font-family: 'akzidenz-medium';
+      color: #444;
+      margin-left: 10px;
       font-size: 1.1em;
-      font-weight: bold;
-      color: #e99405;
-      opacity: .5;
     }
   }
-}
-/*
+
+  .followMe {
+    margin-top: 3px;
+  }
+
+  .follow-button {
+    font-size: 0.8em;
+    color: white;
+    float: left;
+    padding: 10px 14px;
+    line-height: 1;
+    background: @theme-color;
+  }
+
+  .follow-button:hover {
+    color: inherit;
+    background: @hover-color;
+  }
+  /* followers number */
+  .followMe span {
+    position: relative;
+    background: #FFF;
+    margin-left: 8px;
+    padding: 3px 8px;
+    color: #444;
+    font-size: 0.8em;
+    border: 1px solid;
+    border-color: #BBB;
+    margin-top: 5px;
+    border-radius: 2px;
+  }
+
+  .followMe span::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 5px;
+    height: 5px;
+    left: -4px;
+    top: 30%;
+    background: inherit;
+    border-left: 1px solid;
+    border-top: 1px solid;
+    border-color: inherit;
+    -moz-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  .avatar {
+    width: 64px;
+    height: 64px;
+    float: left;
+    margin: 0 20px 25px 0;
+    border-radius: 2px;
+    box-shadow: 0 0 2px 0 #DDD;
+  }
+  /* List of repositories */
+  .repos {
+    & {
+      clear: both;
+    }
+
+    .header {
+      display: block;
+      width: auto;
+      border-width: 1px 0;
+      /* color: #29d4a7; */
+      font-size: 1.4em;
+      padding: 15px 15px 0;
+      height: fit-content;
+      text-transform: uppercase;
+      font-family: 'mr-eaves-xl-modern', sans-serif;
+    }
+
+    a {
+      position: relative;
+      display: block;
+      margin: 7px 10px;
+      font-size: 0.9em;
+      border-top: 0;
+      width: auto;
+      background: #f9f9f9;
+      padding: 16px;
+
+      &:hover,
+      &:hover span {
+        background-color: @hover-color;
+        color: white;
+        cursor: pointer;
+      }
+
+      &:hover .star::after {
+        opacity: 1;
+      }
+
+      &:first-of-type {
+        border: none;
+      }
+    }
+
+    .repo-name {
+      max-width: 280px;
+      text-overflow: ellipsis;
+      color: @theme-color;
+      font-family: 'akzidenz';
+      font-size: 1.1em;
+    }
+
+    .updated {
+      display: block;
+      font-size: 0.85em;
+      font-style: italic;
+      color: #777;
+    }
+
+    .star {
+      position: absolute;
+      font-size: 0.9em;
+      right: 1em;
+      top: 2em;
+      color: #888;
+
+      &::after {
+        content: '\a0\2605';
+        font-size: 1.1em;
+        font-weight: bold;
+        color: #e99405;
+        opacity: 0.5;
+      }
+    }
+  }
+  /*
 & {
   width: 280px;
   border-radius: 5px;
@@ -215,40 +208,40 @@
   overflow: hidden;
 }
 */
-a {
-  text-decoration: none;
-  color: #444;
+  a {
+    text-decoration: none;
 
-  &:hover {
-    color: #4183C4;
-  }
-}
-
-.name {
-  display: block;
-  font-size: 1.7em;
-  font-weight: bold;
-  color: #222;
-  font-family: 'mr-eaves-xl-modern', sans-serif;
-  margin-bottom: 5px;
-}
-
-.error {
-  & {
-    font-size: 0.8em;
-    color: #444;
-    padding: 10px;
+    &:hover {
+      color: #4183C4;
+    }
   }
 
-  span {
+  .name {
     display: block;
-    border-bottom: 1px solid #DDD;
-    padding-bottom: 5px;
+    font-size: 1.7em;
+    font-weight: bold;
+    color: #222;
+    font-family: 'mr-eaves-xl-modern', sans-serif;
     margin-bottom: 5px;
+  }
 
-    &.remain {
-      text-align: center;
-      font-weight: bold;
+  .error {
+    & {
+      font-size: 0.8em;
+      color: #444;
+      padding: 10px;
+    }
+
+    span {
+      display: block;
+      border-bottom: 1px solid #DDD;
+      padding-bottom: 5px;
+      margin-bottom: 5px;
+
+      &.remain {
+        text-align: center;
+        font-weight: bold;
+      }
     }
   }
 }
