--- a/assets/css/less_parts/global.less
+++ b/assets/css/less_parts/global.less
@@ -27,8 +27,12 @@ article {
 }
 
 section > .container {
-	max-width: 1100px;
+	max-width: 1200px;
 	margin:auto;
+}
+
+strong {
+	font-family: 'akzidenz-medium';
 }
 
 
