--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -21,8 +21,8 @@
 	overflow: hidden;
 	border-bottom: 1px solid #27a2c7;
 
-	@media(max-width: 800px) {
-		 height: 200px;
+	@media(max-width: 1000px) {
+		 height: 300px;
 		 margin-bottom: 0;
 	}
 
@@ -61,7 +61,7 @@
 			right: 0;
 			display: block;
 			width: 300px;
-			z-index: 5;
+			z-index: 200;
 			margin:auto;
 			height: 64px;
 
@@ -108,7 +108,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 10%, rgb(17, 25, 46) 100%);
+	background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 10%, #003c5f 100%);
 	height: 150px;
 	z-index: 100;
 	@media(max-width: 800px) {
@@ -145,7 +145,7 @@
 				font-size: 16px;
 				font-weight: 600;
 				transition: all 0.2s ease-out;
-				@media(max-width: 600px) {
+				@media(max-width: 800px) {
 					padding: 0;
 					font-weight: 500;
 				}
