--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -1,5 +1,8 @@
-.home-template{
-  .main-header{
+.home-template,
+.paged,
+.tag-template,
+.author-template, {
+  .main-header {
     @media(max-width: 800px){
       height:200px;
     }
