--- a/assets/css/less_parts/githubcard.less
+++ b/assets/css/less_parts/githubcard.less
@@ -74,6 +74,7 @@
     padding: 10px 14px;
     line-height: 1;
     background: @theme-color;
+    transition: .2s all easeout;
   }
 
   .follow-button:hover {
@@ -147,6 +148,7 @@
       width: auto;
       background: #f9f9f9;
       padding: 16px;
+      transition: .2s all easeout;
 
       &:hover,
       &:hover span {
