--- a/assets/css/less_parts/pagination.less
+++ b/assets/css/less_parts/pagination.less
@@ -2,7 +2,7 @@
 	pagination
 ====================================================*/
 .pagination {
-	margin: 10px 0;
+	margin: 10px 0 20px;
 	text-align: center;
 	display: block;
 	order: 20;
