--- a/assets/css/less_parts/widgets.less
+++ b/assets/css/less_parts/widgets.less
@@ -35,10 +35,15 @@
 
 	.recent-single-post {
 		.post-title {
-			color: #427382;
+			color: #2094a2;
 			line-height: 1;
 			font-size: 15px;
 			margin:0;
+
+			a {
+				font-family: 'akzidenz-regular';
+			}
+
 
 			&:hover {
 				color: @hover-color;
@@ -177,7 +182,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'akzidenz', 'proxima-nova', serif;
+				font-family: 'akzidenz-regular', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 
