--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -3,13 +3,18 @@
 ====================================================*/
 .main-footer {
 	background: linear-gradient(to bottom, rgba(0,255,196,0.2), rgba(41,58,63,0));
-	padding: 35px 80px;
+	padding: 35px 12%;
 	color: white;
 	margin-top: 30px;
 	background-color: #3c465a;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	display: flex;
 	justify-content: space-around;
+
+	@media(max-width: 1000px) {
+		padding: 30px;
+	}
+
 	@media(max-width: 600px) {
 		margin-top: 10px;
 		display: block;
@@ -27,8 +32,8 @@
 
 		@media(max-width: 800px){
 			padding: 0;
-	    width: auto;
-	    margin: 10px 40px 60px 40px;
+	    width: 30%;
+	    margin: 10px 20px 60px 20px;
 		}
 
 		.title {
