--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -12,7 +12,7 @@
 .page-about {
   h1 {
     @media(max-width: 600px) {
-      font-size: 2em;
+      font-size: 3em;
     }
   }
 
@@ -125,6 +125,12 @@
 }
 
 .page-projects {
+
+  h1{
+    @media(max-width: 600px){
+      font-size: 3em;
+    }
+  }
 
   h2 {
     margin-bottom: 20px !important;
