--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -36,6 +36,10 @@
 	    margin: 10px 20px 60px 20px;
 		}
 
+		@media(max-width: 800px){
+	    width: auto;
+		}
+
 		.title {
 			color: @white;
 			font-size: 28px;
